[package]
name = "wasm-liquiddoc-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
pest = "2.7"
pest_derive = "2.7"
insta = "1.43"

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "1.2"
insta = "1.43"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
