[package]
name = "wasm-liquiddoc-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "1.2"
insta = "1.43"
paste = "1.0"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"

[workspace]
members = ["./ext/liquid_doc_core"]
resolver = "2"
