[package]
name = "wasm-liquiddoc-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
wasm-bindgen = "0.2"
serde.workspace = true
serde-wasm-bindgen = "0.4"
liquid_doc_parser = { path = "./parser" }

[dev-dependencies]
insta.workspace = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
insta = "1.43"
pretty_assertions = "1.2"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"

[workspace]
members = ["./ext/liquid_doc_core", "parser"]
resolver = "2"
